# scientific-publications

./: .gitattributes  LICENCE  README.md  README_OLD.md  publications.bib  test.txt  Эстетическая новизна в музыке, сгенерированной искусственным интеллектом - критерии, измерения и философские импликации.docx
THE ROLE OF STUDENT MOVEMENTS IN SOCIAL AND POLITICAL TRANSFORMATIONS OF THE 20TH CENTURY/: CITATION.cff  Роль студенческих движений в социально-политических трансформациях XX века сравнительный анализ.docx
papers/: DevOps-подход к воспроизводимости научных вычислений.docx  Преподавание low-level программирования и встраиваемых систем в условиях технологической автономии.docx  Совместные российско-китайские проекты в области разработки ПО (вызовы и возможности).docx
papers/A DEVOPS APPROACH TO REPRODUCIBLE SCIENTIFIC COMPUTING/: CITATION.cff
papers/AESTHETIC NOVELTY IN MUSIC GENERATED BY ARTIFICIAL INTELLIGENCE/: ~$тетическая новизна в музыке, сгенерированной искусственным интеллектом.docx
papers/AI AND LONELINESS - NEW-GENERATION VIRTUAL COMPANIONS/: ~$ и одиночество - виртуальные компаньоны нового поколения, как зеркало человеческой уязвимости.docx  ИИ и одиночество - виртуальные компаньоны нового поколения, как зеркало человеческой уязвимости.docx
papers/ANALYSIS OF INTERACTION AND POTENTIAL OF EDUCATIONAL COMMUNITIES/: ~$ализ взаимодействия и потенциала образовательных сообществ.docx  Анализ взаимодействия и потенциала образовательных сообществ.docx
papers/ANALYSIS OF SCRUM EFFECTIVENESS IN REMOTE WORK CONDITIONS/: Анализ эффективности Scrum в условиях удалённой работы.docx
papers/ETHICAL DILEMMAS OF ARTIFICIAL INTELLIGENCE IN EDUCATIONAL ENVIRONMENTS/: Этические дилеммы применения искусственного интеллекта в образовательной среде.docx
papers/FOUR STRATEGIES FOR THE FUTURE AN INTEGRATIVE MODEL OF FLEXIBLE BUSINESS MANAGEMENT/: Четыре стратегии будущего интегративная модель гибкого управления бизнесом.docx
papers/GREEN INDUSTRIAL RESET BETWEEN REGULATION AND REALITY/: ~$елёная” перезагрузка промышленности между регуляцией и реальностью.docx  “Зелёная” перезагрузка промышленности между регуляцией и реальностью.docx
papers/INCLUSIVE EDUCATION IN RUSSIAN SCHOOLS SYSTEMIC BARRIERS AND PRACTICES FOR OVERCOMING THEM/: Инклюзивное образование в российских школах системные барьеры и практики преодоления.docx
projects/: system_monitor_x64.py  system_monitor_x86.py
projects/HelioPy/: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPER.md  INSTALL.md  Makefile  README.md  pyproject.toml  setup.py  web_app.py
projects/HelioPy/.github/: PULL_REQUEST_TEMPLATE.md
projects/HelioPy/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
projects/HelioPy/.github/workflows/: ci.yml  docs.yml
projects/HelioPy/configs/: data_sources.yaml  default_config.yaml  visualization.yaml
projects/HelioPy/docs/: conf.py  examples.rst  helioviewer.md  index.rst  installation.rst  quickstart.rst
projects/HelioPy/docs/api/: core.rst  data_sources.rst  events.rst  imaging.rst  magnetic_fields.rst  models.rst  space_weather.rst  utils.rst  visualization.rst
projects/HelioPy/examples/: 01_basic_usage.py  02_flare_analysis.py  03_image_processing.py  04_helioviewer.py  05_psp_data.py  basic_usage.py
projects/HelioPy/heliopy/: __init__.py  cli.py  web_app.py
projects/HelioPy/heliopy/core/: __init__.py  coordinate_systems.py  data_loader.py  data_processor.py  units.py
projects/HelioPy/heliopy/data_sources/: __init__.py  ace_loader.py  base_loader.py  goes_loader.py  helioviewer_loader.py  omni_loader.py  psp_loader.py  sdo_loader.py  soho_loader.py  stereo_loader.py
projects/HelioPy/heliopy/events/: __init__.py  cme_detector.py  event_analyzer.py  event_catalog.py  flare_detector.py
projects/HelioPy/heliopy/i18n/: en.json  ru.json
projects/HelioPy/heliopy/imaging/: __init__.py  feature_extractor.py  image_processor.py  multi_wavelength.py  visualization.py
projects/HelioPy/heliopy/magnetic_fields/: __init__.py  field_extrapolation.py  field_reconstruction.py  reconnection_detector.py  topology_analyzer.py
projects/HelioPy/heliopy/models/: __init__.py  ionosphere_coupling.py  mhd_simulator.py  particle_transport.py  radiation_belt.py
projects/HelioPy/heliopy/space_weather/: __init__.py  forecast_models.py  geomagnetic_storms.py  impact_assessment.py  radiation_models.py
projects/HelioPy/heliopy/static/: style.css
projects/HelioPy/heliopy/templates/: about.html  analysis.html  api.html  helioviewer.html  index.html  visualization.html
projects/HelioPy/heliopy/utils/: __init__.py  config.py  math_utils.py  stats_utils.py  time_utils.py
projects/HelioPy/heliopy/visualization/: __init__.py  animation.py  interactive.py  map_visualizer.py  plotter.py
projects/HelioPy/requirements/: base.txt  dev.txt  docs.txt  test.txt
projects/HelioPy/templates/: about.html  analysis.html  api.html  index.html
projects/HelioPy/tests/: __init__.py
projects/HelioPy/tests/integration/: __init__.py  test_helioviewer_integration.py  test_i18n.py  test_plot_api.py  test_psp_integration.py  test_web_endpoints.py
projects/HelioPy/tests/unit/: __init__.py  test_core.py  test_data_sources.py  test_events.py  test_helioviewer.py  test_imaging.py  test_psp.py  test_utils.py
projects/ISS_Telemetry_Analyzer/: IMPROVEMENTS.md  demo.py  (+7 more)
projects/traffic-analyzer/: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  Makefile  README.md  USAGE_GUIDE.md  docker-compose.yaml  healthcheck.py  main_optimized.py  pyproject.toml  requirements-dev.txt  test-local.ps1  test-project.ps1
projects/traffic-analyzer/docs/: API.md
projects/traffic-analyzer/nodes/: DetectionTrackingNodes.py  KafkaProducerNode.py
projects/traffic-analyzer/scripts/: code_quality.ps1  dev_setup.ps1  run_tests.ps1
projects/traffic-analyzer/tests/: conftest.py  test_fps_counter.py  test_integration.py  test_utils.py
projects/traffic-analyzer/utils_local/: logger.py  metrics.py  utils.py
(+200 files in other folders)
