[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heliopy"
version = "0.1.0"
description = "Open-source библиотека для анализа солнечной активности и прогнозирования космической погоды"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Custom License by Programming School Maestro7IT"}
authors = [
    {name = "Dupley Maxim Igorevich"}
]
keywords = ["solar", "heliophysics", "space weather", "astronomy", "solar flares", "CME"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "astropy>=5.0.0",
    "scikit-image>=0.18.0",
    "scikit-learn>=1.0.0",
    "netCDF4>=1.5.0",
    "h5py>=3.0.0",
    "tqdm>=4.60.0",
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "PyYAML>=5.4.0",
]

[project.optional-dependencies]
sunpy = ["sunpy>=3.0.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]
web = ["Flask>=2.2"]
all = ["heliopy[sunpy,dev,docs]"]

[project.scripts]
heliopy = "heliopy.cli:main"
heliopy-web = "heliopy.web_app:main"

[tool.setuptools]
packages = ["heliopy"]
package-data = {"heliopy" = ["templates/*.html", "static/*.css", "i18n/*.json"]}

[tool.black]
line-length = 100
target-version = ['py38']
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | \.tox
  | build
  | dist
  | __pycache__
)/
'''

[tool.ruff]
line-length = 100
target-version = "py38"
exclude = [".git", ".venv", "__pycache__", "build", "dist", ".eggs", ".tox"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B905",  # zip strict parameter
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/**/*.py" = ["S101"]  # assert usage in tests

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

